[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["Anthony Joel Williams <williamsjanthony15@yahoo.com\">"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
